data/collection/fixes/descriptions/kotlin/KT-14598
```
class Foo {
    open fun foo() {}
}

class Bar : Foo() {
    override fun foo() {}
}
```

```
1.kt:5:13: error: this type is final, so it cannot be inherited from
class Bar : Foo() {
            ^
1.kt:6:5: error: 'foo' in 'Foo' is final and cannot be overridden
    override fun foo() {}
    ^
```

The second error is useless here. If there are many such members and the base class is accidentally final, lots of errors are reported.